Fix a typo in pyproject.tom, try again adding news fragment.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,7 +123,7 @@ directory = "docs"
 name = "Documentation"
 showcontent = true
 
-[[tool.towndcrier.type]]
+[[tool.towncrier.type]]
 directory = "snappl"
 name = "snappl"
 showcontent = true
