--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # automatically requests pull request reviews for files matching the given pattern; the last match takes precendence
 
-*       @raknop @Roman-Supernova-Pit/software-admins
+*       @rknop @Roman-Supernova-Pit/software-admins
