--- a/snappl/tests/docker-compose.yaml
+++ b/snappl/tests/docker-compose.yaml
@@ -29,8 +29,8 @@ services:
 
   runtests:
     image: rknop/roman-snpit-env:cpu
-    working_dir: /snappl/snappl/tests
-    entrypoint: [ "pytest", "-v" ]
+    working_dir: /snappl
+    entrypoint: [ "/bin/sh", "-c", "python -m setuptools_scm --force-write-version_files && pytest -v snappl/tests" ]
     volumes:
       - type: bind
         source: ../..
