--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -26,7 +26,7 @@ jobs:
       - run: pip install .
       - run: pip install towncrier
       - run: pip install setuptools-scm
-      - run: bash -c "if [[ -f snappl/_version.py ]]; then /bin/false; fi"
+      - run: bash -c "[[ ! - f snappl/_version.py ]]"
       - run: python -m setuptools_scm --force-write-version-files
       - run: towncrier check
       - run: towncrier build --draft | grep -P '#${{ github.event.number }}'
