--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -26,7 +26,8 @@ jobs:
       - run: pip install .
       - run: pip install towncrier
       - run: pip install setuptools-scm
-      # - run: [[ ! -f snappl/_version.py ]]
+      - shell: bash
+        run: [[ ! -f snappl/_version.py ]]
       - run: python -m setuptools_scm --force-write-version-files
       - run: towncrier check
       - run: towncrier build --draft | grep -P '#${{ github.event.number }}'
