--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "snappl"
+name = "roman_snpit_snappl"
 description = "Developed by the Roman Supernova PIT"
 requires-python = ">=3.11"
 readme = { file = "README.rst", content-type = "text/x-rst" }
@@ -101,7 +101,7 @@ exclude_lines = [
 # This can be .rst or .md, towncrier's default template works with both.
 filename = "CHANGES.rst"
 directory = "changes"
-package = "snappl"
+package = "roman_snpit_snappl"
 title_format = "{version} ({project_date})"
 ignore = [".gitkeep"]
 wrap = true
