--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
 min_version = 4.0
 envlist =
-    py{310,311,312}-test
-    py10-test-oldestdeps
-    build_docs
+    py{311,312,313}-test
+    py-test-oldestdeps
+    build-docs
 
 [testenv]
 # tox environments are constructed with so-called 'factors' (or terms)
-# separated by hyphens, e.g. test-devdeps-cov. Lines below starting with factor:
+# separated by hyphens, e.g. py311-test. Lines below starting with factor:
 # will only take effect if that factor is included in the environment name. To
 # see a list of example environments that can be run, along with a description,
 # run:
