--- a/.github/workflows/run_labeler.yml
+++ b/.github/workflows/run_labeler.yml
@@ -4,15 +4,19 @@ on:
   pull_request_target:
     types:
       - opened
-      - synchronize
+      - synchronized
+      - reopened
 
 jobs:
-  triage:
+  labeler:
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - id: label-the-PR
       - uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9  # v5.0.0
-        if: github.event_name == 'pull_request_target' || github.event_name == 'pull_request'
-        with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          sync-labels: true
+          with:
+            repo-token: "${{ secrets.GITHUB_TOKEN }}"
+            sync-labels: true  # removes labels when files reverted
+            configuration-path: .github/labeler.yml
+          
