--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ prune build
 prune docs/_build
 prune docs/api
 global-exclude *.pyc *.o
-
-# This subpackage is only used in development checkouts
-# and should not be included in built tarballs
-prune snappl/_dev
+prune snappl/_version.py
+include LICENSE
+include README.rst
+include pyproject.toml
