--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,47 @@
-[build-system]
-requires = [
-  "setuptools>=62.1",
-  "setuptools_scm[tomli]>=6.2",
-  "wheel",]
-build-backend = "setuptools.build_meta"
-
 [project]
-name = "roman_snpit_snappl"
-description = "Developed by the Roman Supernova PIT"
+name = "snappl"
+description = "Photometry utilities for the Roman SNPIT"
 requires-python = ">=3.11"
-readme = { file = "README.rst", content-type = "text/x-rst" }
-license = { file = "licenses/LICENSE.rst" }
-authors = [
-  { name = "Roman Supernova PIT", email = "raknop@lbl.gov" },
+dynamic = ["version"]
+authors = [{ name = "Roman Supernove Project Infrastructure Team"}]
+
+maintainers = [
+ {name = "Roman SN PIT", email = "raknop@lbl.gov"}
+ ]
+classifiers = [
+  # How mature is this project? Common values are
+  #   3 - Alpha
+  #   4 - Beta
+  #   5 - Production/Stable
+  "Development Status :: 3 - Alpha",
+  "Programming Language :: Python"
 ]
 dependencies = [
   "towncrier",
+  "setuptools_scm",
   "cruft",
-  "astropy>=7.0.1",
+  "coverage",
+  
 ]
-dynamic = ["version"]
+license-files = ["LICENSE"]
+
+
+[project.readme]
+file = "README.rst"
+content-type = "text/x-rst"
+
+
+
+
 
 [project.optional-dependencies]
 test = [
     "pytest",
     "pytest-doctestplus",
-    "pytest-cov"
+    "pytest-cov",
+    "requests",
+    "tox",
+    "devpi_process"
 ]
 docs = [
     "sphinx",
@@ -35,18 +51,36 @@ docs = [
     "tomli",
     "graphviz"
 ]
+
+
 [project.urls]
-repository = "https://github.com/Roman-Supernova-PIT/snappl"
+repository = "https://github.com/Roman-Supernova-PIT"
+
+
+
+[build-system]
+requires = [
+  "setuptools>=62.1",
+  "setuptools_scm[tomli]>=6.2",
+  "wheel",
+  "numpy>=1.26",
+
+]
+build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 zip-safe = false
 include-package-data = true
 
 [tool.setuptools.packages.find]
-exclude = ["snappl._dev*"]
+namespaces = false
+include = [
+"snappl*"
+]
 
 [tool.setuptools_scm]
-write_to = "snappl/_version.py"
+# can be empty if no extra settings are needed, presence enables setuptools-scm
+version_file = "snappl/_version.py"
 
 [tool.pytest.ini_options]
 testpaths = [
@@ -54,6 +88,7 @@ testpaths = [
   "docs",
 ]
 doctest_plus = "enabled"
+doctest_rst = "enabled"
 text_file_format = "rst"
 addopts = "--doctest-rst"
 
@@ -65,14 +100,14 @@ omit = [
  "snappl/tests/*",
  "snappl/*/tests/*",
  "snappl/extern/*",
- "snappl/version*",
+ "snappl/_version*",
  "*/snappl/__init*",
  "*/snappl/conftest.py",
  "*/snappl/*setup_package*",
  "*/snappl/tests/*",
  "*/snappl/*/tests/*",
  "*/snappl/extern/*",
- "*/snappl/version*",
+ "*/snappl/_version*",
 ]
 
 [tool.coverage.report]
@@ -96,16 +131,48 @@ exclude_lines = [
   "@overload",
 ]
 
+[tool.ruff]
+line-length = 120
+indent-width = 4
+exclude = [
+    ".git",
+    ".github",
+    ".ruff_cache",
+    ".vscode",
+    "__pypackages__",
+    "docs",
+]
+
+
+[tool.ruff.lint]
+preview = true
+select = [ 'F', 'E101', 'E111', 'E112', 'E113', 'E115', 'E117',
+           'E204', 'E223', 'E224', 'E242', 'E265', 'E273', 'E274', 'E275',
+           'E301', 'E302', 'E305', 'E306', 'E401', 'E501', 'E502', 'E703',
+           'E711', 'E713', 'E714', 'E72', 'E74',
+           'W19', 'W29', 'W39', 'W605',
+           'N804', 'N805', 'N807',
+           'D206', 'D300', 'D301',
+           'UP010', 'UP011', 'UP012', 'UP013', 'UP014', 'UP017', 'UP018', 'UP019',
+           'UP02', 'UP030', 'UP031', 'UP033', 'UP034', 'UP035', 'UP036',
+           'UP037', 'UP039', 'UP04',
+           'PLE0100', 'PLE0101', 'PLE0116',
+           'NPY',
+           'RUF018',
+           'E301', 'E302', 'E306', 'W505', 'D200', 'D212', 'RUF021' ]
+
+
 [tool.towncrier]
 # Where you want your news files to come out, filename=`NEWS.rst` is the default.
 # This can be .rst or .md, towncrier's default template works with both.
 filename = "CHANGES.rst"
 directory = "changes"
-package = "roman_snpit_snappl"
+package = "snappl"
+package_dir = "snappl"
 title_format = "{version} ({project_date})"
 ignore = [".gitkeep"]
 wrap = true
-issue_format = "`#{issue} <https://github.com/Roman-Supernova-PIT/snappl/issues/{issue}>`_"
+issue_format = "`#{issue} <https://github.com/Roman-Supernova-PIT/roman_snpit_snappl/issues/{issue}>`_"
 
 [[tool.towncrier.type]]
 directory = "/"
@@ -115,6 +182,16 @@ showcontent = true
 [[tool.towncrier.type]]
 directory = "docs"
 name = "Documentation"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "bugfix"
+name = "Bugfixes"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "feature"
+name = "New Features"
 showcontent = true
 
 [[tool.towncrier.type]]
