--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,7 +167,7 @@ select = [ 'F', 'E101', 'E111', 'E112', 'E113', 'E115', 'E117',
 # This can be .rst or .md, towncrier's default template works with both.
 filename = "CHANGES.rst"
 directory = "changes"
-package = "roman_snpit_snappl"
+package = "snappl"
 package_dir = "snappl"
 title_format = "{version} ({project_date})"
 ignore = [".gitkeep"]
