tune up github action to pull the same image we use in the test

--- a/.github/workflows/run_snappl_tests.yml
+++ b/.github/workflows/run_snappl_tests.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: pull latest SNPIT cpu image
         run: |
-          docker pull rknop/roman-snpit-env:cpu
+          docker pull rknop/roman-snpit-env:cpu-dev
 
       - name: run test
         run: |
