working on tests for ou24psf

--- a/snappl/tests/snappl_test_config.yaml
+++ b/snappl/tests/snappl_test_config.yaml
@@ -1,3 +1,6 @@
+ou2024psf:
+  config_file: /snappl/snappl/tests/tds.yaml
+
 photometry:
     snappl:
         A25ePSF_path: /snappl/snappl/tests/testdata/A25ePSF
