set GITHUB_SKIP in workflow ; changelog

--- a/.github/workflows/run_snappl_tests.yml
+++ b/.github/workflows/run_snappl_tests.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       COMPOSE_FILE: snappl/tests/docker-compose.yaml
+      GITHUB_SKIP: 1
 
     steps:
       - name: Dump docker logs on failure
