Set GITHUB_SKIP in the wrong place; fix.

--- a/snappl/tests/docker-compose.yaml
+++ b/snappl/tests/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
   runtests:
     image: rknop/roman-snpit-env:cpu-dev
     working_dir: /snappl
+    environment:
+      GITHUB_SKIP: 1
     entrypoint:
       - /bin/sh
       - -c
