--- a/.github/workflows/run_snappl_tests.yml
+++ b/.github/workflows/run_snappl_tests.yml
@@ -20,10 +20,19 @@ jobs:
         uses: jwalton/gh-docker-logs@v2
 
       - name: checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           submodules: recursive
 
+      - name: run ruff
+        uses: astral-sh/ruff-action@v3
+          
+      - name: checkout photometry test data
+        uses: actions/checkout@v5
+        with:
+          repository: Roman-Supernova-PIT/photometry_test_data
+          path: photometry_test_data
+          
       - name: log into github container registry
         uses: docker/login-action@v3
         with:
