--- a/.github/workflows/run_snappl_tests.yml
+++ b/.github/workflows/run_snappl_tests.yml
@@ -22,6 +22,7 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v5
         with:
+          path: main
           submodules: recursive
 
       - name: run ruff
