--- a/.github/workflows/run_snappl_tests.yml
+++ b/.github/workflows/run_snappl_tests.yml
@@ -33,12 +33,15 @@ jobs:
         with:
           repository: Roman-Supernova-PIT/photometry_test_data
           path: photometry_test_data
+
+      - name: lfs pull photometry test data
         run: |
           git lfs install --local
           AUTH=$(git config --local http.${{ github.server_url }}/.extraheader)
           git config --local --unset http.${{ github.server_url }}/.extraheader
           git config --local http.${{ github.server_url }}/${{ github.repository }}.git/info/lfs/objects/batch.extraheader "$AUTH"
           git lfs pull
+        working-directory: photometry_test_data
 
       - name: looky looky
         run: ls -R
