--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,14 @@ classifiers = [
   "Programming Language :: Python"
 ]
 dependencies = [
+  "numpy",
+  "scipy",
+  "astropy",
+  "photutils",
+  "pandas",
+  "h5py",
+  "roman-datamodels",
+  "snpit_utils",
   "towncrier",
   "setuptools_scm",
   "cruft",
@@ -48,6 +56,7 @@ docs = [
     "sphinx-automodapi",
     "matplotlib",
     "sphinx",
+    "mock",
     "tomli",
     "graphviz"
 ]
