--- a/snappl/tests/snappl_test_config.yaml
+++ b/snappl/tests/snappl_test_config.yaml
@@ -1,7 +1,12 @@
 ou24:
+  tds_base: /photometry_test_data/ou2024
   config_file: /photometry_test_data/ou2024/tds.yaml
+
   sn_truth_dir: /photometry_test_data/ou2024/snana_truth
   # sn_truth_dir: /snana_pq_dir
+
+  images: /photometry_test_data/ou2024/images/simple_model
+
   sims_sed_library: /photometry_test_data/ou2024/sims_sed_library
   # Comment from Cole & Rob: This is a path to the SEDs that were used to generate the
   # OU24 simulations.  Only a subset of the files are stored in
@@ -14,3 +19,4 @@ ou24:
 photometry:
     snappl:
         A25ePSF_path: /snappl/snappl/tests/testdata/A25ePSF
+        temp_dir: /tmp
