Fix 2x-too-bring issue in image_simulator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
   "pandas",
   "h5py",
   "roman-datamodels",
-  "snpit_utils",
+  "snpit_utils>=0.0.11",
   "towncrier",
   "setuptools_scm",
   "cruft",
