Make the URL of the simdex configurable

--- a/snappl/tests/snappl_test_config.yaml
+++ b/snappl/tests/snappl_test_config.yaml
@@ -20,3 +20,5 @@ photometry:
     snappl:
         A25ePSF_path: /snappl/snappl/tests/testdata/A25ePSF
         temp_dir: /tmp
+
+        simdex_server: https://roman-desc-simdex.rknop.net
