--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
   "pyyaml==6.0.3",
   "roman-datamodels==0.27.0",
   "scipy==1.16.2",
-  "snpit_utils>=0.0.11",
+  "snpit_utils>=0.0.12,<0.0.13",
 ]
 license-files = ["LICENSE"]
 
