--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 #   gunicorn, and psycopg.
 # However, most use of snappl won't be running the webserver, so we
 #   don't list those as explicit dependencies.  (No need to bloat the
-#   environment.  The Dockerfile in docker/webserver explicitly installs
+#   environment.)  The Dockerfile in docker/webserver explicitly installs
 #   these packages.
 dependencies = [
   "astropy>=7.1.0,<8.0.0",
