debugging paths on something that's launched on commit is annoying

--- a/.github/workflows/run_snappl_tests.yml
+++ b/.github/workflows/run_snappl_tests.yml
@@ -24,6 +24,12 @@ jobs:
 
       - name: run ruff
         uses: astral-sh/ruff-action@v3
+
+      - name: something
+        run: |
+          echo "github.workspace = " ${github.workspace}
+          ls
+          ls snappl
           
       - name: checkout photometry test data
         uses: actions/checkout@v5
