--- a/.github/workflows/run_snappl_tests.yml
+++ b/.github/workflows/run_snappl_tests.yml
@@ -42,10 +42,14 @@ jobs:
           # try to save HDD space on the runner by removing some unneeded stuff
           # ref: https://github.com/actions/runner-images/issues/2840#issuecomment-790492173
           # (For some perverse reason, this step seems to take 1.5-2 minutes on github runners!)
+          df -h
+          echo "------"
           sudo rm -rf /usr/share/dotnet
           sudo rm -rf /opt/ghc
           sudo rm -rf "/usr/local/share/boost"
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          echo "------"
+          df -h
 
       - name: pull environment archive
         run: |
@@ -66,7 +70,7 @@ jobs:
           ls snappl
           echo "--------"
           cd environment/test-docker-environment
-          docker compose up -d webserver shell
+          # docker compose up -d webserver shell
           docker compose run createdb
           # docker compose exec shell bash -c 'cd /home/snappl && pip install -e .[test]'
           # docker compose exec shell bash -c 'cd /home/snappl/snappl/tests && pytest -v'
