--- a/.github/workflows/run_snappl_tests.yml
+++ b/.github/workflows/run_snappl_tests.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: cleanup
         run: |
-          # try to save HDD space on the runner by removing some unneeded stuff
+          # try to save HDD space on the runner by removing some unneeded stuff (~8GB)
           # ref: https://github.com/actions/runner-images/issues/2840#issuecomment-790492173
           # (For some perverse reason, this step seems to take 1.5-2 minutes on github runners!
           # For that reason, this is commented out, for now.  Uncomment it if we run into trouble.)
