--- a/docker/webserver/config-test.yaml
+++ b/docker/webserver/config-test.yaml
@@ -5,23 +5,23 @@
 # and then set the env var SNPIT_CONFIG to point
 # to that config.
 
-webserver:
-  flask_secret_key: o6950bi77gvbc2jie49lklotwll69ayv
-  sessionstore: /sessions
-  emailfrom: nobody@nowhere.org
-  smtpserver: mailhog
-  smtpport: 1025
-  smtpusessl: False
-  smtpusername: NULL
-  smtppassword: NULL
+system:
+  webserver:
+    flask_secret_key: o6950bi77gvbc2jie49lklotwll69ayv
+    sessionstore: /sessions
+    emailfrom: nobody@nowhere.org
+    smtpserver: mailhog
+    smtpport: 1025
+    smtpusessl: False
+    smtpusername: NULL
+    smtppassword: NULL
   
-
-db:
-  postgres_host: postgres
-  postgres_port: 5432
-  postgres_database: roman_snpit
-  postgres_username: postgres
-  postgres_password: fragile
-  # These next two are for debugging purposes and should always be false in production
-  echoqueries: true
-  alwaysexplain: false
+  db:
+    postgres_host: postgres
+    postgres_port: 5432
+    postgres_database: roman_snpit
+    postgres_username: postgres
+    postgres_password: fragile
+    # These next two are for debugging purposes and should always be false in production
+    echoqueries: true
+    alwaysexplain: false
