--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
         with:
           fetch-depth: 0
-      - run: apt-get install -y libfftw3-double3
+      - run: sudo apt-get -y update && sudo apt-get install -y libfftw3-double3
       - run: pip install .
       - run: pip install towncrier
       - run: towncrier check
