I have succesfully written and read a test spectrum data structure to an HDF5 file

--- a/snappl/tests/snappl_test_config.yaml
+++ b/snappl/tests/snappl_test_config.yaml
@@ -4,6 +4,7 @@ replaceable_preloads:
 
 system:
   paths:
+    spectra1d: /home/snappl/snappl/tests/outdata/spectra1d
     lightcurves: /home/snappl/snappl/tests/outdata/lightcurves
     segmaps: /home/snappl/snappl/tests/outdata/segmaps
     images: /home/snappl/snappl/tests/outdata/images
