Modifing tests a bit to go with changes to environment/test-docker-environment

--- a/snappl/tests/snappl_test_config.yaml
+++ b/snappl/tests/snappl_test_config.yaml
@@ -1,6 +1,6 @@
 replaceable_preloads:
-  - /default_snpit_config.yaml
-  - /home/environment/test-docker-environment/test_config_for_db.yaml
+  - /snpit_test_config.yaml
+  - /test_config_for_db.yaml
 
 system:
   paths:
