--- a/spin/rknop_dev/postgres.yaml
+++ b/spin/rknop_dev/postgres.yaml
@@ -73,6 +73,8 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         command: [ "sh", "-c", "chown 100:102 /pgdata" ]
+        securityContext:
+          allowPrivilegeEscalation: false
         volumeMounts:
         - name: postgres
           mountPath: /pgdata
