--- a/spin/rknop_dev/webserver.yaml
+++ b/spin/rknop_dev/webserver.yaml
@@ -55,7 +55,7 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         tty: true
-        # command: [ 'tail', '-f', '/etc/issue' ]
+        command: [ 'tail', '-f', '/etc/issue' ]
         volumeMounts:
         - mountPath: /sessions
           name: webserver-sessions
